--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "css-loader": "^6.7.3",
     "prettier": "2.8.1",
     "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1"
+    "webpack-cli": "^5.0.1",
+    "gh-pages": "^4.0.0"
   }
 }
